2009-11-29  Karl Berry  <karl@freefriends.org>

	Rewrite `gnupload --help' examples.
	* lib/gnupload: Use GNU style version numbers, a generic package
	name, and more useful examples.

2009-11-28  Jim Meyering  <meyering@redhat.com>

	avoid a warning from perl-5.11
	* lib/Automake/Wrap.pm (_tab_length): Remove useless use of tr's
	"/d" modifier.

2009-11-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Distribute the Automake bootstrap script.
	* Makefile.am (EXTRA_DIST): Add bootstrap.
	Report by Jan Engelhardt.

2009-10-31  Jim Meyering  <meyering@redhat.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Don't let an envvar setting of "$fail" cause build failure.
	Without this change, in a project using an automake-generated
	Makefile, "make fail=anything" would fail inappropriately,
	due to the `test -z "$$fail"' at the end of this emitted rule:
	* lib/am/subdirs.am ($(RECURSIVE_TARGETS)): Initialize "fail=" to keep
	an envvar setting of that variable from causing unwarranted failure.
	($(RECURSIVE_CLEAN_TARGETS)): Likewise.
	* tests/subdir10.test: New test.
	* tests/Makefile.am: Update.

2009-10-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Sync auxiliary files from upstream.
	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: Sync from upstream.

	Doc and comment typos.
	* automake.in (handle_ltlibraries): Fix typo in comment.
	* tests/distcom7.test: Likewise.
	* tests/lisp5.test: Likewise.
	* doc/automake.texi (Usage of Conditionals): Fix typo.

2009-10-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix race condition in werror2.test due to sanity sleep change.
	* tests/werror2.test: Generate Makefile.in before configure so
	that a Makefile.am update after configure has run is guaranteed
	to be newer than Makefile.in.
	* tests/subdir5.test: Document why this test does not need to be
	fixed.
	* tests/subdir8.test: Likewise.

	Improve description of the various *LINK variables.