@@ -24,7 +24,7 @@ set -e
 cat >Makefile.am <<'END'
 SUBDIRS = subpkg
 test-distdir-is-readable:
-	bad_dirs=`find $(distdir) -type d ! -perm -777 -print`; \
+	bad_dirs=`find $(distdir) -type d ! -perm -755 -print`; \
 	if test -n "$$bad_dirs"; then \
 	  echo "directories not permissive: $$bad_dirs" >&2; \
 	  exit 1; \
