@@ -1,3 +1,11 @@
+2009-11-28  Jim Meyering  <meyering@redhat.com>
+
+	do not put world-writable directories in distribution tarballs
+	* lib/am/distdir.am (distdir): Do not make all directories
+	group- or world-writable.  Instead, use 755.
+	* tests/subpkg4.test (test-distdir-is-readable): Check for new,
+	more restricted permissions.
+
 2009-11-29  Karl Berry  <karl@freefriends.org>
 
 	Rewrite `gnupload --help' examples.
